# ossupdate

./: .gitignore  CMakeLists.txt  README.md  opensuse-update-applet.desktop  opensuse-update-applet.spec
resources/: resources.qrc
resources/styles/: dark.qss  light.qss
src/: autostartmanager.cpp  autostartmanager.h  lockmanager.cpp  lockmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  passwordmanager.cpp  passwordmanager.h  selfupdater.cpp  selfupdater.h  settings.cpp  settings.h  traymanager.cpp  traymanager.h  updatechecker.cpp  updatechecker.h  updatelistdialog.cpp  updatelistdialog.h
